--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.gopogleapis.com/css?family=Barlow&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow&display=swap');
 
 html {
     box-sizing: border-box;
@@ -25,7 +25,7 @@ button {
     outline: none;
     width: 120px;
     height: 75px;
-    font-family: Barlow, sans-serif;
+    font-family: 'Barlow', sans-serif;
     font-size: 25px;
     color: white;
     text-shadow: 0 2px 5px black;
